# farcaster-forest

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  DESIGN.md  README.md  THOUGHTS.md  TODO.md  bevy_game-18561a96e0e97de2.js  bevy_game-196bac9bb1360ce4.js  bevy_game-26ac404696d72175.js  bevy_game-66d2cee1b10b66fa.js  bevy_game-6dcb67db1b8a0292.js  bevy_game-99561eb8097d852d.js  bevy_game-9b222a122dc9064d.js  bevy_game-e98f593383e875f7.js  cliff.toml  clippy.toml  index.html  rust-toolchain.toml  tarpaulin.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
.factory/skills/bevy-game-dev/: SKILL.md
.github/: CODEOWNERS  ISSUE_LABELS.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-page.yaml  release-android-google-play.yaml  release-ios-testflight.yaml  release-notes.yml  release.yaml
.well-known/: farcaster.json
credits/: CREDITS.md
docs/: architecture.mermaid
docs/runbooks/: README.md  build-failures.md  ci-troubleshooting.md  release-process.md
examples/bevy/: README.md
mobile/: Cargo.toml
nix/: rust-toolchain.toml
src/: audio.rs  bird.rs  lib.rs  loading.rs  scene.rs
tests/: integration_test.rs
