[package]
name = "bevy_game"
version = "0.1.0"
publish = false
authors = ["Bryan Stitt <bryan@satoshiandkin.com>"]
edition = "2024"
exclude = ["dist", "build", "assets", "credits"]

[workspace]
members = ["mobile"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
# this is supposedly mac-only
split-debuginfo = "unpacked"

[profile.dev.build-override]
opt-level = 3

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
# xbuild also uses this profile for building android AABs because I couldn't find a configuration for it
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[features]
dev = [
    "bevy/dynamic_linking",
]

# All of Bevy's default features exept for the audio related ones (bevy_audio, vorbis), since they clash with bevy_kira_audio
#   and android_shared_stdcxx/android-game-activity, since those are covered in `mobile`
[dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "std",
    "async_executor",
    "gltf_animation",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_post_process",
    "bevy_anti_alias",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_input_focus",
    "bevy_log",
    "mesh_picking",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_image",
    "bevy_mesh",
    "bevy_camera",
    "bevy_light",
    "bevy_shader",
    "bevy_sprite",
    "sprite_picking",
    "bevy_sprite_render",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "ui_picking",
    "bevy_ui_render",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "hdr",
    "ktx2",
    "multi_threaded",
    "png",
    "reflect_auto_register",
    "smaa_luts",
    "sysinfo_plugin",
    "tonemapping_luts",
    "webgl2",
    "x11",
    "wayland",
    "debug",
    "zstd_rust",
] }
bevy_kira_audio = { version = "0.25", features = ["android_shared_stdcxx", "ogg"] }
bevy_asset_loader = { version = "0.25.0" }
rand = { version = "0.9.2" }
getrandom = { version = "0.4.1", features = ["wasm_js"] }
webbrowser = { version = "1", features = ["hardened"] }

# keep the following in sync with Bevy's dependencies
winit = { version = "0.30", default-features = false }
image = { version = "0.25.9", default-features = false }
## This greatly improves WGPU's performance due to its heavy use of trace! calls
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
rng = "0.1.0"
rand_chacha = "0.9.0"


[build-dependencies]
embed-resource = "3"
